openshift/deployment_config.yaml
# Tekton-101: DeploymentConfig, OpenShift specific
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: tekton-101-deployment-config
  labels:
    app: tekton-101
spec:
  replicas: 1
  selector:
    name: tekton-101
  strategy:
    type: Recreate
    recreateParams:
      timeoutSeconds: 20
      post:
        failurePolicy: Ignore
        tagImages:
        - containerName: tekton-101
          to:
            kind: ImageStreamTag
            name: tekton-101:latest
  template:
    metadata:
      labels:
        name: tekton-101
        app: tekton-101
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/tekton-101/tekton-101:latest
        imagePullPolicy: Always
        name: tekton-101
        ports:
        - containerPort: 5000
          protocol: TCP
        resources:
          limits:
            memory: 256Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - emptyDir: {}
        name: vol1
  triggers:
  - type: ConfigChange
  - type: ImageChange
    imageChangeParams:
      automatic: true 
      from:
        kind: "ImageStreamTag"
        name: "tekton-101:latest"
        namespace: "tekton-101"
      containerNames:
        - "tekton-101"
status: {}
