openshift/route.yaml
# Tekton-101: Route
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: tekton-101
  name: tekton-101
spec:
  port:
    targetPort: 5000-tcp
  to:
    kind: Service
    name: tekton-101
    weight: 100
